# pyscreenshotter

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pyscreenshotter/: __init__.py
tests/: test_pyscreenshotter.py
