[tool.poetry]
name = "pyscreenshotter"
version = "0.1.0"
description = "A package for doing great things!"
authors = ["Eric Nantz"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mss = "^6.1.0"
DateTime = "^4.3"
timeloop = "^1.0.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
